--- a/style.css
+++ b/style.css
@@ -1,99 +1,64 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: 0;
-  outline: 0;
-  font-family: sans-serif;
-}
+    html {
+      /* background: #018DED url(https://unsplash.it/1500/1000?image=881&blur=5);*/
+      background-color: #018DED;
+      background-size: cover;
+      font-family: 'helvetica neue';
+      text-align: center;
+      font-size: 10px;
+    }
 
-body {
-  display: grid;
-  place-items: center;
-  height: 100vh;
-  background: bisque;
-  transform: scale(1.2);
-}
+    body {
+      margin: 0;
+      font-size: 2rem;
+      display: flex;
+      flex: 1;
+      min-height: 100vh;
+      align-items: center;
+    }
 
-.dot {
-  width: 20px;
-  height: 20px;
-  background: black;
-  position: relative;
-  top: calc(50% - 10px);
-  left: calc(50% - 10px);
-  z-index: 999;
-  border-radius: 20px;
-}
+    .clock {
+      width: 30rem;
+      height: 30rem;
+      border: 20px solid white;
+      border-radius: 50%;
+      margin: 50px auto;
+      position: relative;
+      padding: 2rem;
+      box-shadow:
+        0 0 0 4px rgba(0,0,0,0.1),
+        inset 0 0 0 3px #EFEFEF,
+        inset 0 0 10px black,
+        0 0 10px rgba(0,0,0,0.2);
+    }
 
-.clock {
-  height: 200px;
-  width: 200px;
-  box-shadow: 0 0 0 10px black;
-  border-radius: 200px;
-  position: relative;
-  background: whitesmoke;
-  /* overflow: hidden; */
-}
+    .clock-face {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      /* transform: translateY(-3px); */ /* account for the height of the clock hands */
+    }
 
-.hand-sec {
-  height: 200px;
-  width: 200px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  animation: rotating 60s linear infinite;
-}
-.hand-min {
-  height: 200px;
-  width: 200px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  animation: rotating 360s linear infinite;
-}
-.hand-hr {
-  height: 200px;
-  width: 200px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  animation: rotating 3600s linear infinite;
-}
+    .hand {
+      width: 50%;
+      height: 6px;
+      background: black;
+      position: absolute;
+      top: 50%;
+      transform-origin: 100% 50%;
+      transform: rotate(90deg);
+      transition: all 0.05s linear;
+      border-radius: 30% 0 0 30%;
+    }
 
-.sec {
-  height: 4px;
-  width: 110px;
-  position: absolute;
-  top: calc(50% - 2px);
-  left: 40%;
-  background: coral;
-  border-radius: 10px;
-}
-.min {
-  height: 10px;
-  width: 100px;
-  position: absolute;
-  top: calc(50% - 5px);
-  left: 40%;
-  background: rgb(80, 121, 255);
-  border-radius: 10px;
-}
-.hr {
-  height: 10px;
-  width: 86px;
-  position: absolute;
-  top: calc(50% - 5px);
-  left: 40%;
-  background: rgb(154, 199, 6);
-  border-radius: 10px;
-}
+    .hour-hand {
+      height: 10px;
+      margin-top: -5px;
+      transform-origin: 100% 50%;
+      transition: all 1s linear;
+      transform: scaleX(0.8);
+    }
 
-/* animation: rotating 60s linear infinite; */
-@keyframes rotating {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+    .second-hand {
+      background-color: red;
+      transition: all 0.05s cubic-bezier(0.25, 0.1, 0.84, 2.82); /* tick */
+    }
